--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.VoluntNear"
         tools:targetApi="31">
         <activity
+            android:name=".bene.bene_create"
+            android:exported="false" />
+        <activity
             android:name=".bene.bene_reqsummary"
             android:exported="false" />
         <activity
